--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
          # figshare API endpoint
          FIGSHARE_ENDPOINT: 'https://api.figshare.com/v2'
         # existing figshare article id
-         FIGSHARE_ARTICLE_ID: 10.18742/28582688
+         FIGSHARE_ARTICLE_ID: 28582688
         # directory with files to upload
          DATA_DIR: 'TAMS_data_visualisation'
           
